--- a/index.html
+++ b/index.html
@@ -150,7 +150,6 @@
         /* New style for testimonials section background */
         #testimonials.gradient-bg-testimonials {
             background-image: linear-gradient(to top left, #a7f3d0, #5eead4, #0d9488); /* Lighter teal/green gradient */
-            color: white; /* Make text white for contrast */
         }
          #testimonials.gradient-bg-testimonials h2 {
             color: white;
@@ -213,7 +212,8 @@
 </head>
 <body class="text-slate-800">
 
-    <!-- Header --><header id="main-header" class="sticky top-0 z-50 transition-all duration-300">
+    <!-- Header -->
+    <header id="main-header" class="sticky top-0 z-50 transition-all duration-300">
         <nav class="container mx-auto px-6 py-2 flex justify-between items-center">
             <a href="#" class="text-white text-2xl font-bold">
                 <div class="logo-container">
@@ -240,7 +240,8 @@
         </nav>
     </header>
 
-    <!-- Hero Section --><section class="hero-bg text-white pt-20 pb-28 text-center overflow-hidden">
+    <!-- Hero Section -->
+    <section class="hero-bg text-white pt-20 pb-28 text-center overflow-hidden">
         <div class="container mx-auto px-6" data-aos="fade-up">
             <span class="bg-white/10 border border-white/20 text-yellow-300 text-sm font-bold px-4 py-1 rounded-full">متاح التسجيل الآن</span>
             <h1 class="text-4xl sm:text-5xl md:text-6xl font-extrabold leading-tight mt-4">
@@ -256,15 +257,18 @@
         </div>
     </section>
 
-    <!-- Main Content - Reordered Sections --><main class="container mx-auto px-4 sm:px-8 -mt-16">
+    <!-- Main Content - Reordered Sections -->
+    <main class="container mx-auto px-4 sm:px-8 -mt-16">
 
-        <!-- Promotional Video Section --><section id="video" class="mb-24" data-aos="fade-up" data-aos-delay="200">
+        <!-- Promotional Video Section -->
+        <section id="video" class="mb-24" data-aos="fade-up" data-aos-delay="200">
             <div class="video-container max-w-6xl mx-auto">
                 <iframe src="https://www.youtube.com/embed/npTasyNEoS4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </section>
 
-        <!-- Why Join Section (Benefits) --><section id="why-join" class="mb-24 hero-bg py-20 rounded-3xl">
+        <!-- Why Join Section (Benefits) -->
+        <section id="why-join" class="mb-24 hero-bg py-20 rounded-3xl">
             <div class="max-w-6xl mx-auto px-6" data-aos="fade-up">
                 <div class="text-center mb-12">
                     <h2 class="text-3xl font-bold text-white">إزاي الكورس ده هيغير حياتك؟</h2>
@@ -305,7 +309,8 @@
             </div>
         </section>
 
-        <!-- What You'll Learn Section (Skills) --><section id="what-you-learn" class="mb-24">
+        <!-- What You'll Learn Section (Skills) -->
+        <section id="what-you-learn" class="mb-24">
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8" data-aos="fade-up">
                 <div class="text-center mb-12">
                     <h2 class="text-3xl font-bold text-slate-800">المهارات اللي هتكتسبها</h2>
@@ -372,7 +377,8 @@
             </div>
         </section>
 
-        <!-- Bonus Section --><section id="bonus" class="mb-24 py-20 gradient-bg-section rounded-3xl">
+        <!-- Bonus Section -->
+        <section id="bonus" class="mb-24 py-20 gradient-bg-section rounded-3xl">
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8" data-aos="fade-up">
                 <div class="text-center mb-12">
                     <h2 class="text-3xl font-bold text-white">🎁 بونص حصري: جيش المساعدين الشخصيين</h2>
@@ -485,7 +491,8 @@
             </div>
         </section>
 
-        <!-- About Me Section --><section id="about" class="mb-24 section-bg-gray py-20">
+        <!-- About Me Section -->
+        <section id="about" class="mb-24 section-bg-gray py-20">
              <div class="bg-white p-8 rounded-2xl shadow-xl max-w-5xl mx-auto border" data-aos="fade-up">
                  <div class="flex flex-col md:flex-row items-center gap-10">
                     <div class="md:w-1/3 text-center">
@@ -515,27 +522,29 @@
              </div>
         </section>
 
-        <!-- Testimonials/Success Story Section - Updated with Feedback --><section id="testimonials" class="mb-24 py-20 rounded-3xl gradient-bg-testimonials">
+        <!-- Testimonials/Success Story Section - Updated with Feedback -->
+        <section id="testimonials" class="mb-24 py-20 gradient-bg-testimonials rounded-3xl">
              <div class="max-w-6xl mx-auto px-6" data-aos="fade-up">
-                 <h2 class="text-3xl font-bold text-center mb-12">⭐ آراء بعض المشتركين</h2>
+                 <h2 class="text-3xl font-bold text-center mb-12 text-white">⭐ آراء بعض المشتركين</h2>
                  <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                      <div class="p-8 rounded-2xl shadow-lg border testimonial-card" data-aos="fade-up" data-aos-delay="100">
-                         <i class="fas fa-quote-right text-3xl mb-4"></i>
-                         <p class="flex-grow mb-6 leading-relaxed">"الكورس مفيد جدا جدا حقيقي و استفدت منه و الشرح استثنائي و مبسط بشكل كبير لأي حد لسه مش متعمق في المجال"</p>
+                         <i class="fas fa-quote-right text-teal-500 text-3xl mb-4"></i>
+                         <p class="text-slate-600 flex-grow mb-6 leading-relaxed">"الكورس مفيد جدا جدا حقيقي و استفدت منه و الشرح استثنائي و مبسط بشكل كبير لأي حد لسه مش متعمق في المجال"</p>
                      </div>
                      <div class="p-8 rounded-2xl shadow-lg border testimonial-card" data-aos="fade-up" data-aos-delay="200">
-                         <i class="fas fa-quote-right text-3xl mb-4"></i>
-                         <p class="flex-grow mb-6 leading-relaxed">"مبهر وممتع اوي .. حقيقي ببقى مستنية الشرح الجديد عشان اشوف هاا هعمل عظمة ايه المرادي ؟ سهل عليا كتير اوي وقت ومجهود مش طبيعي وجميل ان فيه دايما افكار مختلفة في كل حاجة مش محصورة في مجال معين بالعكس"</p>
+                         <i class="fas fa-quote-right text-teal-500 text-3xl mb-4"></i>
+                         <p class="text-slate-600 flex-grow mb-6 leading-relaxed">"مبهر وممتع اوي .. حقيقي ببقى مستنية الشرح الجديد عشان اشوف هاا هعمل عظمة ايه المرادي ؟ سهل عليا كتير اوي وقت ومجهود مش طبيعي وجميل ان فيه دايما افكار مختلفة في كل حاجة مش محصورة في مجال معين بالعكس"</p>
                      </div>
                       <div class="p-8 rounded-2xl shadow-lg border testimonial-card" data-aos="fade-up" data-aos-delay="300">
-                         <i class="fas fa-quote-right text-3xl mb-4"></i>
-                         <p class="flex-grow mb-6 leading-relaxed">"كويس بصراحه كبداية انه يخليك تفهم الأساسيات علي الاقل وبعده هتحس انك بعد الطفرة والعدد الكبير من تطبيقات AI بعد الكورس هتعرف شوية تفك الدنيا وهتعرف انهم مش كتيررر من الاخر هو زي بوصلة يظبط دماغك ويحطك علي الطريق بأمر الله"</p>
+                         <i class="fas fa-quote-right text-teal-500 text-3xl mb-4"></i>
+                         <p class="text-slate-600 flex-grow mb-6 leading-relaxed">"كويس بصراحه كبداية انه يخليك تفهم الأساسيات علي الاقل وبعده هتحس انك بعد الطفرة والعدد الكبير من تطبيقات AI بعد الكورس هتعرف شوية تفك الدنيا وهتعرف انهم مش كتيررر من الاخر هو زي بوصلة يظبط دماغك ويحطك علي الطريق بأمر الله"</p>
                      </div>
                  </div>
             </div>
         </section>
         
-        <!-- FAQ Section - Moved Here --><section id="faq" class="py-20 bg-slate-50 mb-24">
+        <!-- FAQ Section - Moved Here -->
+        <section id="faq" class="py-20 bg-slate-50 mb-24">
             <div class="max-w-4xl mx-auto px-6" data-aos="fade-up">
                 <div class="text-center mb-12">
                      <h2 class="text-3xl font-bold text-slate-800">أسئلة شائعة</h2>
@@ -624,7 +633,8 @@
             </div>
         </section>
 
-        <!-- Subscription Section - Moved after FAQ --><section id="subscribe">
+        <!-- Subscription Section - Moved after FAQ -->
+        <section id="subscribe">
             <div class="bg-gradient-to-br from-teal-700 to-teal-900 p-8 sm:p-12 rounded-2xl shadow-2xl max-w-4xl mx-auto text-white" data-aos="zoom-in">
                 <div class="text-center">
                     <h2 class="text-4xl font-extrabold">جاهز تنضم لأسرة Smarter With Ai؟</h2>
@@ -632,8 +642,8 @@
                         <p>🚀 التسجيل مفتوح للدفعات الجديدة.</p>
                         <p>ابدأ رحلتك دلوقتي!</p>
                     </div>
-                     <a href="https://www.facebook.com/profile.php?id=61577068962672" target="_blank" class="w-full max-w-sm mx-auto inline-block bg-blue-600 text-white font-bold py-4 px-8 rounded-md hover:bg-blue-500 transition-colors duration-300 shadow-lg text-lg">
-                        <i class="fab fa-facebook-f mr-2"></i>
+                     <a href="https://wa.me/201007964766" target="_blank" class="w-full max-w-sm mx-auto inline-block bg-green-500 text-white font-bold py-4 px-8 rounded-md hover:bg-green-600 transition-colors duration-300 shadow-lg text-lg">
+                        <i class="fab fa-whatsapp mr-2"></i>
                         تواصل للاشتراك والاستفسار
                     </a>
                 </div>
@@ -698,4 +708,3 @@
     </script>
 </body>
 </html>
-
