--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
         <!-- Promotional Video Section -->
         <section id="video" class="mb-24" data-aos="fade-up" data-aos-delay="200">
             <div class="video-container max-w-6xl mx-auto">
-                <iframe src="https://www.youtube.com/embed/npTasyNEoS4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/1TWllndZuFI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </section>
 
