--- a/index.html
+++ b/index.html
@@ -664,7 +664,7 @@
                 <p class="text-white font-semibold mt-1">انضم لمجتمعنا وخليك دايماً Smarter With Ai.</p>
             </div>
             <div class="flex justify-center space-x-6 space-x-reverse mb-8">
-                <a href="https://www.facebook.com/profile.php?id=61577068962672" target="_blank" class="text-gray-400 hover:text-white transition-colors"><i class="fab fa-facebook-f text-2xl"></i></a>
+                <a href="https://www.facebook.com/groups/1106148034264004" target="_blank" class="text-gray-400 hover:text-white transition-colors"><i class="fab fa-facebook-f text-2xl"></i></a>
                 <a href="https://t.me/Smarter_With_Ai" target="_blank" class="text-gray-400 hover:text-white transition-colors"><i class="fab fa-telegram-plane text-2xl"></i></a>
             </div>
             <p class="text-sm text-gray-500">
