--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
             </div>
         </section>
 
-        <!-- Course Tracks Section (NEWLY RESTRUCTURED) -->
+        <!-- Course Tracks Section -->
         <section id="tracks" class="mb-24">
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8" data-aos="fade-up">
                 <div class="text-center mb-12">
@@ -272,7 +272,7 @@
                     </p>
                 </div>
                 
-                <div class="grid grid-cols-1 lg:grid-cols-3 gap-8">
+                <div class="grid grid-cols-1 lg:grid-cols-3 gap-8 text-right">
                     <!-- Level 1: Foundation -->
                     <div class="track-card p-8 rounded-2xl border-t-8 border-green-500 flex flex-col h-full" data-aos="fade-up" data-aos-delay="100">
                         <div class="flex items-center justify-between mb-6">
@@ -372,7 +372,7 @@
         </section>
 
         <!-- Bonus Section -->
-        <section id="bonus" class="mb-24 py-20 gradient-bg-section rounded-3xl">
+        <section id="bonus" class="mb-24 py-20 gradient-bg-section rounded-3xl shadow-xl">
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8" data-aos="fade-up">
                 <div class="text-center mb-12">
                     <h2 class="text-3xl font-bold text-white">🎁 بونص حصري: جيش المساعدين الشخصيين</h2>
@@ -466,18 +466,61 @@
         <section id="testimonials" class="mb-24 py-20 gradient-bg-testimonials rounded-3xl shadow-xl">
              <div class="max-w-6xl mx-auto px-6" data-aos="fade-up">
                  <h2 class="text-3xl font-bold text-center mb-12 text-white">⭐ آراء بعض المشتركين</h2>
-                 <div class="grid grid-cols-1 md:grid-cols-3 gap-8 text-right">
-                     <div class="p-8 rounded-2xl shadow-lg border testimonial-card" data-aos="fade-up" data-aos-delay="100">
+                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 text-right">
+                     <!-- Card 1 -->
+                     <div class="p-8 rounded-2xl shadow-lg border testimonial-card">
                          <i class="fas fa-quote-right text-teal-500 text-3xl mb-4"></i>
                          <p class="text-slate-600 flex-grow mb-6 leading-relaxed">"الكورس مفيد جدا جدا حقيقي و استفدت منه و الشرح استثنائي و مبسط بشكل كبير لأي حد لسه مش متعمق في المجال"</p>
                      </div>
-                     <div class="p-8 rounded-2xl shadow-lg border testimonial-card" data-aos="fade-up" data-aos-delay="200">
+                     <!-- Card 2 -->
+                     <div class="p-8 rounded-2xl shadow-lg border testimonial-card">
                          <i class="fas fa-quote-right text-teal-500 text-3xl mb-4"></i>
                          <p class="text-slate-600 flex-grow mb-6 leading-relaxed">"مبهر وممتع اوي .. حقيقي ببقى مستنية الشرح الجديد عشان اشوف هاا هعمل عظمة ايه المرادي ؟ سهل عليا كتير اوي وقت ومجهود مش طبيعي وجميل ان فيه دايما افكار مختلفة في كل حاجة مش محصورة في مجال معين بالعكس"</p>
                      </div>
-                      <div class="p-8 rounded-2xl shadow-lg border testimonial-card" data-aos="fade-up" data-aos-delay="300">
+                     <!-- Card 3 -->
+                      <div class="p-8 rounded-2xl shadow-lg border testimonial-card">
                          <i class="fas fa-quote-right text-teal-500 text-3xl mb-4"></i>
                          <p class="text-slate-600 flex-grow mb-6 leading-relaxed">"كويس بصراحه كبداية انه يخليك تفهم الأساسيات علي الاقل وبعده هتحس انك بعد الطفرة والعدد الكبير من تطبيقات AI بعد الكورس هتعرف شوية تفك الدنيا وهتعرف انهم مش كتيررر من الاخر هو زي بوصلة يظبط دماغك ويحطك علي الطريق بأمر الله"</p>
+                     </div>
+                     <!-- Card 4 (New) -->
+                     <div class="p-8 rounded-2xl shadow-lg border testimonial-card">
+                         <i class="fas fa-quote-right text-teal-500 text-3xl mb-4"></i>
+                         <p class="text-slate-600 flex-grow mb-6 leading-relaxed">"ما شاء الله كورس جميل وممتع معاك ي دكتور محمود ربنا يكرمكم وينفع بيك ي رب 🧡"</p>
+                     </div>
+                     <!-- Card 5 (New) -->
+                     <div class="p-8 rounded-2xl shadow-lg border testimonial-card">
+                         <i class="fas fa-quote-right text-teal-500 text-3xl mb-4"></i>
+                         <p class="text-slate-600 flex-grow mb-6 leading-relaxed">"كورس جميل ومفيد جدا وأسلوب حضرتك مبسط وسلس ومتوفر فيه كل شيء بصراحة."</p>
+                     </div>
+                     <!-- Card 6 (New) -->
+                     <div class="p-8 rounded-2xl shadow-lg border testimonial-card">
+                         <i class="fas fa-quote-right text-teal-500 text-3xl mb-4"></i>
+                         <p class="text-slate-600 flex-grow mb-6 leading-relaxed">"مفيد جدا و الدكتور ذوق و متعاون جدا"</p>
+                     </div>
+                     <!-- Card 7 (New) -->
+                     <div class="p-8 rounded-2xl shadow-lg border testimonial-card">
+                         <i class="fas fa-quote-right text-teal-500 text-3xl mb-4"></i>
+                         <p class="text-slate-600 flex-grow mb-6 leading-relaxed">"كنز حقيقي"</p>
+                     </div>
+                     <!-- Card 8 (New) -->
+                     <div class="p-8 rounded-2xl shadow-lg border testimonial-card">
+                         <i class="fas fa-quote-right text-teal-500 text-3xl mb-4"></i>
+                         <p class="text-slate-600 flex-grow mb-6 leading-relaxed">"بجد حابب اشكرك ع مجهودك خلال الكورس و قدرت تنورلي الطريق ازاي استخدم الذكاء الاصطناعي بشكل محترف و منظم جدا و بالتوفيق لك في المرحلة القادمة 🙏"</p>
+                     </div>
+                     <!-- Card 9 (New) -->
+                     <div class="p-8 rounded-2xl shadow-lg border testimonial-card">
+                         <i class="fas fa-quote-right text-teal-500 text-3xl mb-4"></i>
+                         <p class="text-slate-600 flex-grow mb-6 leading-relaxed">"ممتاز"</p>
+                     </div>
+                     <!-- Card 10 (New) -->
+                     <div class="p-8 rounded-2xl shadow-lg border testimonial-card">
+                         <i class="fas fa-quote-right text-teal-500 text-3xl mb-4"></i>
+                         <p class="text-slate-600 flex-grow mb-6 leading-relaxed">"الكورس كان مفيد جدا و علمني ازاي اتعامل مع ال ai بعد ما كنت ساعات بحسه اوفريتيد و نتايجه مش ثابتة و دكتور محمود ما شاء الله عليه متعاون جدا و اي أسئلة بيجاوب عليها و بيشرحها"</p>
+                     </div>
+                     <!-- Card 11 (New) -->
+                     <div class="p-8 rounded-2xl shadow-lg border testimonial-card lg:col-span-2">
+                         <i class="fas fa-quote-right text-teal-500 text-3xl mb-4"></i>
+                         <p class="text-slate-600 flex-grow mb-6 leading-relaxed">"حابة أشكر حضرتك جدا على الكورس والله ، الكورس منظم ومتعوب عليه أنا كان دايما فيه gap بيني وبين ال ai ومكنتش عارفة أبدأ منين وأعمل ايه حسيت أن الكورس وضحلي حاجات كتير أو خلى عندي المقدرة أن لما حد يتكلم عن tool أو عن ال ai عموما مخافش أجرب وأتعلم فربنا يجازي حضرتك خير يارب ومنتظرة أي حاجة حضرتك تعملها أكيد هشترك فيها إن شاء الله"</p>
                      </div>
                  </div>
             </div>
@@ -497,7 +540,7 @@
                             <i class="fas fa-chevron-down accordion-icon text-slate-500"></i>
                         </button>
                         <div class="accordion-content bg-slate-50">
-                             <div class="p-5 text-slate-600 space-y-3">
+                             <div class="p-5 text-slate-600 space-y-3 text-right">
                                 <p>هدفنا نساعدك تستخدم الـ AI صح في مذاكرتك، شغلك، وحياتك. وده من خلال:</p>
                                 <ul class="space-y-2 pr-4">
                                     <li class="flex items-start"><i class="fas fa-check text-teal-500 mt-1 ml-3"></i><span>محاضرات مسجلة سهلة وبسيطة.</span></li>
@@ -525,7 +568,7 @@
                             <span>⏰ إيه نظام المواعيد؟</span>
                             <i class="fas fa-chevron-down accordion-icon text-slate-500"></i>
                         </button>
-                        <div class="accordion-content bg-slate-50">
+                        <div class="accordion-content bg-slate-50 text-right">
                             <div class="p-5 text-slate-600 space-y-4">
                                 <p>المحاضرات مسجلة وتقدر تشوفها في أي وقت. بالنسبة للمسار المتقدم والدبلومة، بيكون فيه لايف أسبوعي للمناقشة والتطبيق العملي، وبنعلن عن ميعاده في جروب الكورس.</p>
                             </div>
@@ -540,7 +583,7 @@
             <div class="bg-gradient-to-br from-teal-700 to-teal-900 p-8 sm:p-12 rounded-2xl shadow-2xl max-w-4xl mx-auto text-white" data-aos="zoom-in">
                 <div class="text-center">
                     <h2 class="text-4xl font-extrabold mb-4">جاهز تنضم لأسرة Smarter With Ai؟</h2>
-                    <div class="text-slate-200 text-lg mb-8 max-w-2xl mx-auto">
+                    <div class="text-slate-200 text-lg mb-8 max-w-2xl mx-auto text-center">
                         <p class="mb-2 font-bold text-yellow-300">🚀 التسجيل مفتوح للدفعات الجديدة.</p>
                         <p>ابدأ رحلتك في تعلم الذكاء الاصطناعي دلوقتي!</p>
                     </div>
