--- a/index.html
+++ b/index.html
@@ -151,9 +151,9 @@
                 
                 <p class="text-lg sm:text-xl md:text-2xl text-white leading-relaxed font-bold mb-8">
                     أهلاً بيك في عالم <span class="text-yellow-300">Smarter With Ai</span>!<br>
-                    <span class="text-slate-200 font-medium text-lg sm:text-xl block mt-3">
-                        الرحلة دي متصممة عشان تخلي الـ AI يكون صديقك! يفهمك ويساعدك، ويشتغل عندك عشان تكون Smarter.<br>
-                        مش محتاج خبرة سابقة، استعدادك بس هو اللي هيفرق!
+                    <span class="text-slate-200 font-medium text-lg sm:text-xl block mt-3 leading-relaxed">
+                        الرحلة دي متصممة عشان تخلي الـ AI يكون صديقك!<br>
+                        يفهمك ويساعدك تكون أذكي وسابق بخطوة.
                     </span>
                 </p>
                 
